Menu invvi abbonati

--- a/app/views/contract_users/edit.html.erb
+++ b/app/views/contract_users/edit.html.erb
@@ -1,4 +1,7 @@
-<h1>Editing contract_user</h1>
+<h2>Editing contract_user</h2>
+<div id="footer-menu" class="box">
+  <%= render_menu :menu_payment_fs %>
+</div>
 
 <% form_for(@contract_user) do |f| %>
   <%= f.error_messages %>
