--- a/app/views/contract_users/index.html.erb
+++ b/app/views/contract_users/index.html.erb
@@ -1,4 +1,7 @@
-<h1>Listing contract_users</h1>
+<h2>Listing contract_users</h2>
+<div id="footer-menu" class="box">
+  <%= render_menu :menu_payment_fs %>
+</div>
 
 <table>
   <tr>
