--- a/app/views/contracts/new.html.erb
+++ b/app/views/contracts/new.html.erb
@@ -1,4 +1,7 @@
-<h1>New contract</h1>
+<h2>New contract</h2>
+<div id="footer-menu" class="box">
+  <%= render_menu :menu_payment_fs %>
+</div>
 
 <% form_for(@contract) do |f| %>
   <%= f.error_messages %>
