--- a/app/views/fees/paganti.html.erb
+++ b/app/views/fees/paganti.html.erb
@@ -3,9 +3,61 @@
     <%= render_menu :menu_fee_fs %>
   </div>
   In questa pagina:
-  <ul> 
+  <ul>
     <li>List utenti privati che paganno: username, Organismo associato, Privato o Numero aderenti(membri), data registrazione, </li>
     <li>Naviga: vai al dettaglio di un utente - Organismo associato</li>
-  </ul> 
+  </ul>
 
+<h2><%=l(:label_user_plural)%></h2>
 
+<% form_tag({}, :method => :get) do %>
+<fieldset><legend><%= l(:label_filter_plural) %></legend>
+
+<label for='abbo'><%= l(:field_abbonamento_type) %>:</label>
+<%= select_tag 'abbo', fee_roles_options_for_select(@abbo), :onchange => "this.form.submit(); return false;"  %>
+
+<label for='name'><%= l(:label_user) %>:</label>
+<%= text_field_tag 'name', params[:name], :size => 30 %>
+<%= submit_tag l(:button_apply), :class => "small", :name => nil %>
+<%= link_to l(:button_clear), paganti_path(), :class => 'icon icon-reload' %>
+</fieldset>
+<% end %>
+&nbsp;
+
+<div class="autoscroll">
+<table id="tblinvii" class="list">
+  <thead><tr>
+  <%= sort_header_tag('lastname', :caption => l(:field_user_fee)) %>
+  <%# sort_header_tag('firstname', :caption => l(:field_firstname)) %>
+  <%# sort_header_tag('lastname', :caption => l(:field_lastname)) %>
+  <%= sort_header_tag('mail', :caption => l(:field_mail)) %>
+  <%= sort_header_tag('datascadenza', :caption => l(:field_data_scadenza), :default_order => 'desc') %>
+  <%= sort_header_tag('role_id', :caption => '', :default_order => 'desc') %>
+  <%= sort_header_tag('convention_id', :caption => l(:field_convention), :default_order => 'desc') %>
+    <th style="text-align:left; width: 40px;"><i class="icon icon-email" title="Imposti per l'invio email"></i><input id="checkbox_selector" type="checkbox" name="invia" class="selectall" checked="checked" /></th>
+  </tr></thead>
+  <tbody>
+<% for user in @users -%>
+  <tr class='user <%= cycle("odd", "even") %> <%= %w(anon active registered locked)[user.status] %>'>
+    <%# user.login user.firstname user.lastname %>
+  <td class="username"><%= avatar(user, { :size => "14", :class => "no-div" }) %><%= link_to h(user.name), edit_user_path(user) %></td>
+  <td class="email"><%= mail_to(h(user.mail)) %></td>
+  <td class="datascadenza" align="left"><%= format_date(user.scadenza) %></td>
+  <td class="role" align="left"><%= get_status_role(user) %></td>
+  <td class="convention_id" align="left"><%= h truncate(user.convention.name, :length => 30) unless user.privato? %></td>
+  <td class=""><%# check_box_tag 'ids[]', user.id, {:name => "invia"} %></td>
+    </td>
+    <td>
+      <%# user.scoped_by_newsletter_users(@).nil? %>
+    </td>
+  </tr>
+<% end -%>
+  </tbody>
+</table>
+<script type="text/javascript" charset="utf-8">
+
+  </script>
+</div>
+<p class="pagination"><%# pagination_links_full @user_pages, @user_count %></p>
+
+<% html_title(l(:label_user_plural)) -%>
