--- a/app/views/group_banners/index.html.erb
+++ b/app/views/group_banners/index.html.erb
@@ -3,6 +3,9 @@
 </div>
 
 <h2><%= l(:label_group_banner_plural) %></h2>
+<div id="footer-menu" class="box">
+  <%= render_menu :menu_table_fs %>
+</div>
 
 <% if @group_banners.any? %>
 <table class="list group_banners">
