--- a/app/views/invoices/edit.html.erb
+++ b/app/views/invoices/edit.html.erb
@@ -1,9 +1,12 @@
 <h2><%= link_to l(:label_invoice_plural), invoices_path %> &#187; <%= h(@invoice) %></h2>
+<div id="footer-menu" class="box">
+  <%= render_menu :menu_payment_fs %>
+</div>
 
 <% labelled_form_for @invoice do |f| %>
 <%= submit_tag l(:button_save) %>
 <%= render :partial => 'form', :locals => { :f => f } %>
 <%= submit_tag l(:button_save) %>
-<!-- <%= f.submit 'Update' %> --> 
+<!-- <%= f.submit 'Update' %> -->
 
 <% end %>
