--- a/app/views/contracts/edit.html.erb
+++ b/app/views/contracts/edit.html.erb
@@ -1,5 +1,7 @@
-<h1>Editing contract</h1>
-
+<h2>Editing contract</h2>
+<div id="footer-menu" class="box">
+  <%= render_menu :menu_payment_fs %>
+</div>
 <% form_for(@contract) do |f| %>
   <%= f.error_messages %>
 
