--- a/app/views/contracts/show.html.erb
+++ b/app/views/contracts/show.html.erb
@@ -1,3 +1,8 @@
+<h2></h2>
+<div id="footer-menu" class="box">
+  <%= render_menu :menu_payment_fs %>
+</div>
+
 <p>
   <b>Name:</b>
   <%=h @contract.name %>
