--- a/app/views/conventions/edit.html.erb
+++ b/app/views/conventions/edit.html.erb
@@ -1,4 +1,7 @@
 <h2><%= link_to l(:label_convention_plural), conventions_path %> &#187; <%= h(@conv) %></h2>
+<div id="footer-menu" class="box">
+  <%= render_menu :menu_table_fs %>
+</div>
 
 <% labelled_form_for (@conv), :html => {:multipart => true} do |f| %>
 <%= submit_tag l(:button_save) %>
