--- a/app/views/cross_groups/edit.html.erb
+++ b/app/views/cross_groups/edit.html.erb
@@ -1,10 +1,12 @@
 <h2><%= link_to l(:label_cross_group_plural), cross_groups_path %> &#187; <%= h(@cross_group) %></h2>
+<div id="footer-menu" class="box">
+  <%= render_menu :menu_table_fs %>
+</div>
 
 <% labelled_form_for @cross_group do |f| %>
 <%= submit_tag l(:button_save) %>
 <%= render :partial => 'form', :locals => { :f => f } %>
 <%= submit_tag l(:button_save) %>
-<!-- <%= f.submit 'Update' %> --> 
+<!-- <%= f.submit 'Update' %> -->
 
 <% end %>
-
