--- a/app/views/cross_groups/show.html.erb
+++ b/app/views/cross_groups/show.html.erb
@@ -7,7 +7,9 @@
       :class => 'icon icon-del') if User.current.admin? %>
 </div>
 <h2><%= link_to l(:label_cross_group_plural), cross_groups_path %> &#187; <%=h @cross_group %></h2>
-
+<div id="footer-menu" class="box">
+  <%= render_menu :menu_table_fs %>
+</div>
 
 <div class="splitcontentleft">
 
