--- a/app/views/cross_organizations/index.html.erb
+++ b/app/views/cross_organizations/index.html.erb
@@ -3,6 +3,9 @@
 </div>
 
 <h2><%= l(:label_cross_organization_plural) %></h2>
+<div id="footer-menu" class="box">
+  <%= render_menu :menu_table_fs %>
+</div>
 
 <% if @cross_organizations.any? %>
 <table class="list cross_organizations">
