--- a/app/views/fees/associati.html.erb
+++ b/app/views/fees/associati.html.erb
@@ -1,13 +1,70 @@
 <h2><%=l(:list_associati)%></h2>
-  <div id="footer-menu" class="box">
-    <%= render_menu :menu_fee_fs %>
-  </div>
-  In questa pagina:
-  <ul> 
-    <li>List utenti membri si un organismo associato: username, organismo associato, Data ultimo pagamento Organismo, data scadenza utente/Org.Asso</li>
-    <li>Azione: correggi (verifica la congruenza dell'utente di fronte all'Org.Asso e corregge il ruolo data scadenza)</li>
-    <li>Azione: Org.Asso Ha pagato per conto di tutti</li>
-    <li>Naviga: vai al dettaglio di un utente</li>
-    <li>Naviga: vai al dettaglio di un org.Asso</li>
-  </ul> 
+<div id="footer-menu" class="box">
+  <%= render_menu :menu_fee_fs %>
+</div>
+In questa pagina:
+<ul>
+  <li>List utenti membri si un organismo associato: username, organismo associato, Data ultimo pagamento Organismo, data scadenza utente/Org.Asso</li>
+  <li>Azione: correggi (verifica la congruenza dell'utente di fronte all'Org.Asso e corregge il ruolo data scadenza)</li>
+  <li>Azione: Org.Asso Ha pagato per conto di tutti</li>
+  <li>Naviga: vai al dettaglio di un utente</li>
+  <li>Naviga: vai al dettaglio di un org.Asso</li>
+</ul>
 
+<% form_tag({}, :method => :get) do %>
+<fieldset><legend><%= l(:label_filter_plural) %></legend>
+<p class="convention-select">
+<label for='convention_id'><%= l(:field_convention) %>:</label>
+<%= select(:convention,
+           :convention_id,
+           Convention.all.collect{ |s| [truncate(s.name, :length => 120), s.id] },
+           {:include_blank => 'Tutti', :class => "small", :selected => @convention_id, :onchange => "this.form.submit(); return false;" }) %>
+</p>
+
+<label for='name'><%= l(:label_user) %>:</label>
+<%= text_field_tag 'name', params[:name], :size => 30 %>
+<%= submit_tag l(:button_apply), :class => "small", :name => nil %>
+<%= link_to l(:button_clear), associati_path(), :class => 'icon icon-reload' %>
+</fieldset>
+<% end %>
+&nbsp;
+
+<div class="autoscroll">
+<table id="tblinvii" class="list">
+  <thead><tr>
+  <%= sort_header_tag('lastname', :caption => l(:field_user_fee)) %>
+  <%# sort_header_tag('firstname', :caption => l(:field_firstname)) %>
+  <%# sort_header_tag('lastname', :caption => l(:field_lastname)) %>
+  <%= sort_header_tag('mail', :caption => l(:field_mail)) %>
+  <%= sort_header_tag('datascadenza', :caption => l(:field_data_scadenza), :default_order => 'desc') %>
+  <%= sort_header_tag('role_id', :caption => '', :default_order => 'desc') %>
+  <%= sort_header_tag('convention_id', :caption => l(:field_convention), :default_order => 'desc') %>
+    <th style="text-align:left; width: 40px;"><i class="icon icon-email" title="Imposti per l'invio email"></i><input id="checkbox_selector" type="checkbox" name="invia" class="selectall" checked="checked" /></th>
+  </tr></thead>
+  <tbody>
+<% for user in @users -%>
+  <tr class='user <%= cycle("odd", "even") %> <%= %w(anon active registered locked)[user.status] %>'>
+    <%# user.login user.firstname user.lastname %>
+  <td class="username"><%= avatar(user, { :size => "14", :class => "no-div" }) %><%= link_to h(user.name), edit_user_path(user) %></td>
+  <td class="email"><%= mail_to(h(user.mail)) %></td>
+  <td class="datascadenza" align="left"><%= format_date(user.scadenza) %></td>
+  <td class="role" align="left"> <%= user_role_iconized(user, :size => "s", :icon_for => user.uicon, :text => '') %>
+</td>
+  <td class="convention_id" align="left"><%= h truncate(user.convention.name, :length => 30) unless user.privato? %></td>
+  <td class="checkbox"><%# check_box_tag 'ids[]', user.id, {:name => "invia"} %></td>
+    </td>
+    <td>
+      <%# user.scoped_by_newsletter_users(@).nil? %>
+    </td>
+  </tr>
+<% end -%>
+  </tbody>
+</table>
+<script type="text/javascript" charset="utf-8">
+
+
+  </script>
+</div>
+<p class="pagination"><%# pagination_links_full @user_pages, @user_count %></p>
+
+<% html_title(l(:label_user_plural)) -%>
