--- a/app/views/fees/invia_fatture.html.erb
+++ b/app/views/fees/invia_fatture.html.erb
@@ -1,14 +1,13 @@
 <h2><%=l(:invia_fatture)%></h2>
-  <div id="footer-menu" class="box">
-    <%= render_menu :menu_fee_fs %>
-  </div>
+<div id="footer-menu" class="box">
+  <%= render_menu :menu_payment_fs %>
+</div>
   In questa pagina:
-  <ul> 
+  <ul>
     <li>ricerca utente o organismo associato</li>
     <li>Lista delle fatture? raddoppio con le pagine di Invoices</li>
     <li>AZIONE: invia fattura </li>
     <li>AZIONE: annula fattura (crea GAP<b>**</b>) </li>
-  </ul> 
-  
-<b>**</b><small> --> fare fattura di rettifica per conservare la cronologia della numerotazione) </small>
+  </ul>
 
+<b>**</b><small> --> fare fattura di rettifica per conservare la cronologia della numerotazione) </small>
