--- a/app/views/fees/pagamento.html.erb
+++ b/app/views/fees/pagamento.html.erb
@@ -1,5 +1,4 @@
-<h2><%=l(:list_pagamento)%></h2>  
-  <div id="footer-menu" class="box">
-    <%= render_menu :menu_fee_fs %>
-  </div>
-
+<h2><%=l(:list_pagamento)%></h2>
+<div id="footer-menu" class="box">
+  <%= render_menu :menu_payment_fs %>
+</div>
