--- a/app/views/group_banners/edit.html.erb
+++ b/app/views/group_banners/edit.html.erb
@@ -1,10 +1,12 @@
 <h2><%= link_to l(:label_group_banner_plural), group_banners_path %> &#187; <%= h(@group_banner) %></h2>
+<div id="footer-menu" class="box">
+  <%= render_menu :menu_table_fs %>
+</div>
 
 <% labelled_form_for @group_banner, :html => {:multipart => true}  do |f| %>
 <%= submit_tag l(:button_save) %>
 <%= render :partial => 'form', :locals => { :f => f } %>
 <%= submit_tag l(:button_save) %>
-<!-- <%= f.submit 'Update' %> --> 
+<!-- <%= f.submit 'Update' %> -->
 
 <% end %>
-
