--- a/app/views/group_banners/new.html.erb
+++ b/app/views/group_banners/new.html.erb
@@ -1,4 +1,7 @@
 <h2><%= link_to l(:label_group_banner_plural), group_banners_path %> &#187; <%= l(:label_group_banner_new) %></h2>
+<div id="footer-menu" class="box">
+  <%= render_menu :menu_table_fs %>
+</div>
 
 <% labelled_form_for @group_banner, :html => {:multipart => true} do |f| %>
 <%= render :partial => 'form', :locals => { :f => f } %>
