--- a/app/views/invoices/new.html.erb
+++ b/app/views/invoices/new.html.erb
@@ -1,4 +1,7 @@
 <h2><%= link_to l(:label_invoice_plural), invoices_path %> &#187; <%= l(:label_invoice_new) %></h2>
+<div id="footer-menu" class="box">
+  <%= render_menu :menu_payment_fs %>
+</div>
 
 <% labelled_form_for @invoice do |f| %>
 <%= render :partial => 'form', :locals => { :f => f } %>
