--- a/app/views/sections/show.html.erb
+++ b/app/views/sections/show.html.erb
@@ -6,7 +6,11 @@
       :method => :delete,
       :class => 'icon icon-del') if User.current.admin? %>
 </div>
+
 <h2><%= link_to l(:label_section_plural), sections_path %> &#187; <%=h @section %></h2>
+<div id="footer-menu" class="box">
+  <%= render_menu :menu_table_fs %>
+</div>
 
 <div class="splitcontentleft">
   <fieldset class="box tabular">
