--- a/app/views/top_menus/edit.html.erb
+++ b/app/views/top_menus/edit.html.erb
@@ -1,4 +1,8 @@
 <h2><%= link_to l(:label_top_menu_plural), top_menus_path %> &#187; <%= h(@top_menu) %></h2>
+<div id="footer-menu" class="box">
+  <%= render_menu :menu_table_fs %>
+</div>
+
 <% labelled_form_for (@top_menu) do |f| %>
   <%= submit_tag l(:button_save) %>
   <%= render :partial => 'form', :locals => { :f => f } %>
