--- a/app/views/top_menus/index.html.erb
+++ b/app/views/top_menus/index.html.erb
@@ -3,6 +3,9 @@
 </div>
 
 <h2><%= l(:label_top_menu_plural) %></h2>
+<div id="footer-menu" class="box">
+  <%= render_menu :menu_table_fs %>
+</div>
 
 <% if @top_menus.any? %>
 <table class="list top_menus">
