--- a/app/views/top_sections/show.html.erb
+++ b/app/views/top_sections/show.html.erb
@@ -6,7 +6,12 @@
               :method => :delete,
               :class => 'icon icon-del') if User.current.admin? %>
 </div>
+
 <h2><%= link_to l(:label_top_section_plural), top_sections_path %> &#187; <%= h @top_section %></h2>
+<div id="footer-menu" class="box">
+  <%= render_menu :menu_table_fs %>
+</div>
+
 <div class="splitcontentleft">
   <fieldset class="box tabular">
     <legend><%= l(:label_top_section) %></legend>
