group_banner form restyling1

--- a/app/views/group_banners/_form.html.erb
+++ b/app/views/group_banners/_form.html.erb
@@ -14,7 +14,7 @@
   <span class="span3col">
   <p><%= f.text_field :priorita, :label => :field_priorita, :size => 3 %></p> </span>
    <br>
-  <div style="background-color: #2c4056; padding: 10px 0; color: #fff;">
+  <div style="background-color: #2C4056; padding: 10px 0; color: #fff;">
   <p>
     <%= f.select(:posizione, ['associazione', 'block_l', 'block_s', 'tramenu'], {}, {:class => '', :label => :field_posizione}) %>
       <span class="mini-legend"> * NB: se si seleziona 'associazione' verrà visualizzato il 'Banner Associazione' negli
