--- a/app/views/conventions/edit.html.erb
+++ b/app/views/conventions/edit.html.erb
@@ -1,4 +1,4 @@
-<h2><%= link_to l(:label_convention_plural), conventions_path %> &#187; <%= h(@conv) %></h2>
+<h2><%= link_to l(:label_convention), conventions_path %> &#187; <%= h(@conv.ragione_sociale) %></h2>
 
 <div id="footer-menu" class="box">
   <%= render_menu :menu_table_fs %>
