--- a/app/views/conventions/index.html.erb
+++ b/app/views/conventions/index.html.erb
@@ -11,12 +11,11 @@
 <div style="max-width: 960px; overflow: auto;">
 <table class="list conventions">
   <thead><tr>
-  <%= sort_header_tag('ragione_sociale', :title => l(:label_ragione_sociale), :style => 'width: 15%;text-align:left;')%>
-  <%= sort_header_tag('Tipo_Sigla', :title => l(:label_convention_pact), :style => 'width: 15%;text-align:left;')%>
-  <%= sort_header_tag('data_scadenza', :title => l(:label_convention_ref), :style => 'width: 15%;')%>
-  <%= sort_header_tag('presidente', :title => l(:label_convention_people), :style => 'width: 15%;text-align:left;')%>
-  <%= sort_header_tag('indirizzo', :title => l(:label_convention_address), :style => 'width: 15%;text-align:left;')%>
-  <%= sort_header_tag('telefono', :title => l(:label_convention_contact), :style => 'width: 15%;text-align:left;')%>
+  <%= sort_header_tag('ragione_sociale', :title => l(:label_ragione_sociale), :style => 'width: 40%;text-align:left;')%>
+  <%= sort_header_tag('Tipo_Sigla', :title => l(:label_convention_pact), :style => 'width: 20%;text-align:left;')%>
+  <%= sort_header_tag('data_scadenza', :title => l(:label_convention_ref), :style => 'width: 20%;')%>
+  <%#sort_header_tag('presidente', :title => l(:label_convention_people), :style => 'width: 15%;text-align:left;')%>
+  <%= sort_header_tag('contatti', :title => l(:label_convention_contact), :style => 'width: 15%;text-align:left;')%>
 
   <th style='width: 5%;'></th>
   <th style='width: 5%;'></th>
@@ -24,24 +23,26 @@
   <tbody>
 <% @convs.each do |conv| %>
   <tr class="<%= cycle 'odd', 'even' %>">
-    <td><%= link_to(conv, convention_path(conv), :class => 'icon icon-summary') %></td>
+    <td><%= link_to(conv.index, convention_path(conv)) %></td>
     <td>
       <% if conv.cross_organization %>
         <%= link_to h(conv.cross_organization), cross_organization_path(conv.cross_organization, :id => conv.cross_organization_id) %>
       <% end %>
       <br /><%=h conv.get_zone() %></td>
     <td align="left">
-      <%= format_date(conv.data_scadenza) %>
+      <strong>
+        <% if DateTime.now > conv.data_scadenza  %>
+     <span style="color: #b22222;"> <%= format_date(conv.data_scadenza) %>  </span>
+            <%	else  %>
+            <%= format_date(conv.data_scadenza) %>
+        <%	end  %>
+      </strong>
       <br />
       <% if conv.user %>
-        <%= link_to(h(conv.user), user_path(conv.user, :id => conv.user_id), :class => "icon " + conv.user_icon() ) %>
+        <%= link_to(h(conv.user), user_path(conv.user, :id => conv.user_id) ) %>
       <% end %>
     </td>
-
-    <td>Pre: <%=h conv.presidente %><br />Ref: <%=h conv.referente %><br /></td>
-
-    <td><%=h conv.indirizzo %><br /><%=h conv.comune %></td>
-
+    <!--     <td style="font-size: 0.9em;">Pre: <%#h conv.presidente %><br />Ref: <%#h conv.referente %><br /></td>  -->
     <td>Mail: <%=h conv.email %><br />Tel: <%=h conv.telefono %><br />Fax: <%=h conv.fax %></td>
     <td class="buttons"><%= link_to('', edit_convention_path(conv), :class => 'icon icon-edit') if User.current.admin? %></td>
     <td class="buttons"><%= link_to ('', conv, :confirm => l(:text_are_you_sure), :method => :delete, :class => 'icon icon-del') if User.current.admin? %></td>
