menu in admin and removed cross_groups

--- a/app/views/fees/archiviati.html.erb
+++ b/app/views/fees/archiviati.html.erb
@@ -1,7 +1,7 @@
-<h2><%= l(:list_archiviati) %></h2>
+
   <div id="footer-menu" class="box">
     <%= render_menu :menu_fee_fs %>
-  </div>
+  </div><h2><%= l(:list_archiviati) %></h2>
   In questa pagina:
   <ul> 
     <li>List utenti in stato di archiviazione: username, privato o organismo associato, N° pagamenti fatti</li>
