--- a/app/views/fees/email_fee.html.erb
+++ b/app/views/fees/email_fee.html.erb
@@ -1,7 +1,7 @@
-<h2><%=l(:email_fee)%></h2>
+
 <div id="footer-menu" class="box">
   <%= render_menu :menu_payment_fs %>
-</div>
+</div><h2><%=l(:email_fee)%></h2>
   In questa pagina:
   <ul>
     <li>Template delle email da rilancio definiti dentro il Setting</li>
