--- a/app/views/cross_organizations/index.html.erb
+++ b/app/views/cross_organizations/index.html.erb
@@ -1,37 +1,34 @@
 <div class="contextual">
   <%= link_to l(:label_cross_organization_new), new_cross_organization_path, :class => 'icon icon-add' %>
 </div>
-
 <h2><%= l(:label_cross_organization_plural) %></h2>
-<div id="footer-menu" class="box">
-  <%= render_menu :menu_table_fs %>
-</div>
-
 <% if @cross_organizations.any? %>
-<table class="list cross_organizations">
-  <thead><tr>
-    <th style='width: 35px;'></th>
-  <%= sort_header_tag('type_organization', :title => l(:label_type_organization), :style => 'width: 30%;text-align:left;')%>
-  <%= sort_header_tag('sigla', :title => l(:label_sigla), :style => 'color:red; width: 25%;')%>
-  <%= sort_header_tag('se_visibile', :title => l(:label_se_visibile), :style => 'width: 5%;')%>
-  <th style='width: 5%;'></th>
-  <th style='width: 5%;'></th>
-  </tr></thead>
-  <tbody>
-<% @cross_organizations.each do |cross_organization| %>
-  <tr class="<%= cycle 'odd', 'even' %>">
-    <td><%= image_tag cross_organization.image.url(:xs) %></td>
-    <td><%= link_to h(cross_organization.type_organization), type_organization_path(cross_organization.type_organization, :id => cross_organization.type_organization_id) %></td>
-    <td><%= link_to h(cross_organization.sigla), cross_organization_path(cross_organization) %></td>
-    <td align="center"><%= check_box_tag '', 1, cross_organization.se_visibile, :disabled => 'disabled' %></td>
-    <td class="buttons"><%= link_to('', edit_cross_organization_path(cross_organization), :class => 'icon icon-edit') if User.current.admin? %></td>
-    <td class="buttons"><%= link_to ('', cross_organization, :confirm => l(:text_are_you_sure), :method => :delete, :class => 'icon icon-del') if User.current.admin? %></td>
-  </tr>
-<% end %>
-</table>
+    <table class="list cross_organizations">
+      <thead>
+      <tr>
+        <th style='width: 35px;'></th>
+        <%= sort_header_tag('type_organization', :title => l(:label_type_organization), :style => 'width: 30%;text-align:left;') %>
+        <%= sort_header_tag('sigla', :title => l(:label_sigla), :style => 'color:red; width: 25%;') %>
+        <%= sort_header_tag('se_visibile', :title => l(:label_se_visibile), :style => 'width: 5%;') %>
+        <th style='width: 5%;'></th>
+        <th style='width: 5%;'></th>
+      </tr>
+      </thead>
+      <tbody>
+      <% @cross_organizations.each do |cross_organization| %>
+          <tr class="<%= cycle 'odd', 'even' %>">
+            <td><%= image_tag cross_organization.image.url(:xs) %></td>
+            <td><%= link_to h(cross_organization.type_organization), type_organization_path(cross_organization.type_organization, :id => cross_organization.type_organization_id) %></td>
+            <td><%= link_to h(cross_organization.sigla), cross_organization_path(cross_organization) %></td>
+            <td align="center"><%= check_box_tag '', 1, cross_organization.se_visibile, :disabled => 'disabled' %></td>
+            <td class="buttons"><%= link_to('', edit_cross_organization_path(cross_organization), :class => 'icon icon-edit') if User.current.admin? %></td>
+            <td class="buttons"><%= link_to ('', cross_organization, :confirm => l(:text_are_you_sure), :method => :delete, :class => 'icon icon-del') if User.current.admin? %></td>
+          </tr>
+      <% end %>
+      </table>
 
-<p class="pagination"><%= pagination_links_full @cross_organization_pages, @cross_organization_count %></p>
+    <p class="pagination"><%= pagination_links_full @cross_organization_pages, @cross_organization_count %></p>
 
 <% else %>
-<p class="nodata"><%= l(:label_no_data) %></p>
+    <p class="nodata"><%= l(:label_no_data) %></p>
 <% end %>
