--- a/app/views/fees/invia_fatture.html.erb
+++ b/app/views/fees/invia_fatture.html.erb
@@ -1,7 +1,7 @@
-<h2><%=l(:invia_fatture)%></h2>
+
 <div id="footer-menu" class="box">
   <%= render_menu :menu_payment_fs %>
-</div>
+</div><h2><%=l(:invia_fatture)%></h2>
   In questa pagina:
   <ul>
     <li>ricerca utente o organismo associato</li>
