--- a/app/views/conventions/show.html.erb
+++ b/app/views/conventions/show.html.erb
@@ -21,7 +21,18 @@
     </p>
 
     <p><label>
-      <%= l(:label_data_scadenza) %></label><span style="font-weight: bold; color:#2A5685;"><%= format_date(@conv.data_scadenza) %>
+      <%= l(:label_data_scadenza) %></label>
+      <% if @conv.data_scadenza %>
+        <% if DateTime.now > @conv.data_scadenza %>
+          <span class="scadenza-ko"> <%= format_date(@conv.data_scadenza) %>
+        <% elsif @conv.data_scadenza < (DateTime.now + Setting.renew_days.to_i.days) %>
+          <span class="scadenza-renewing"><%= format_date(@conv.data_scadenza) %>
+        <% else  %>
+          <span class="scadenza-ok"><%= format_date(@conv.data_scadenza) %>
+        <% end  %>
+      <% else  %>
+        <span class="scadenza-none">Senza data di scadenza
+      <% end  %>
     </span></p>
 
     <p><label><%= l(:label_richiedinumeroregistrazione) %></label><span>
